--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@ html {
 }
 
 body {
-  background-image: url("../images/bg-image-3.jpeg");
+  background-image: url("../images/test6.gif");
+  /* background-color: black; */
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -24,7 +25,7 @@ body {
 
 .website-name {
   color: white;
-  font-size: 20px;
+  font-size: 25px;
   margin: 0;
 }
 
@@ -44,7 +45,7 @@ button[type="submit"] {
   width: 30%;
   padding: 10px;
   background-color: white;
-  color: gray;
+  color: black;
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -56,7 +57,8 @@ button[type="submit"] {
 .city-column {
   width: 20%;
   height: 100%;
-  background-color: #f2f2f2;
+  background-color: transparent;
+  color: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   padding: 20px;
@@ -64,7 +66,7 @@ button[type="submit"] {
 }
 
 .column-title {
-  font-size: 20px;
+  font-size: 25px;
   margin: 0;
 }
 
@@ -75,11 +77,12 @@ button[type="submit"] {
 }
 
 .city {
-  background-color: white;
+  background-color: transparent;
   padding: 10px;
   margin: 10px 0;
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 22.5px;
+  cursor: pointer;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
@@ -88,7 +91,8 @@ button[type="submit"] {
 .weather-card {
   width: 30%;
   height: auto;
-  background-color: white;
+  background-color: transparent;
+  color: white;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-radius: 10px;
   overflow: hidden;
@@ -125,7 +129,7 @@ button[type="submit"] {
 }
 
 .day-name, .wind-speed, .temperature, .humidity {
-  font-size: 16px;
+  font-size: 20px;
   margin: 10px 0;
 }
 
@@ -134,10 +138,12 @@ button[type="submit"] {
 .days-weather-card {
   width: 25%;
   height: auto;
-  background-color: white;
+  background-color: transparent;
+  color: white;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-radius: 10px;
   overflow: hidden;
+  font-size: 20px;
   text-align: center;
   margin: 1%;
 }
