--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ button[type="submit"] {
 }
 
 .city-name {
-  background-color: #4CAF50;
+  background-color: #51A2D5;
   color: white;
   padding: 10px 0;
   font-size: 20px;
